Add backend , optimize code

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-MONGO_URL=mongodb://localhost:27017/posApp
+MONGO_URL=mongodb+srv://malay134:qZuHXvXzskKcrsSg@cluster.zue04z0.mongodb.net/posApp?retryWrites=true&w=majority&appName=Cluster
+PORT=5000
