--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://malay134:qZuHXvXzskKcrsSg@cluster.zue04z0.mongodb.net/posApp?retryWrites=true&w=majority&appName=Cluster
+MONGO_URL=mongodb://127.0.0.1:27017/pos
 PORT=5000
