--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "html5-qrcode": "^2.2.7",
     "mongoose": "^8.16.2",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icon": "^1.0.0",
