--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,8 @@
+# MONGO_URL=mongodb://127.0.0.1:27017/pos
+# PORT=5000
+
+
+
 MONGO_URL=mongodb://127.0.0.1:27017/pos
 PORT=5000
+JWT_SECRET=pos_secret_key
