--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^8.16.2",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
